--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
     margin: 0px;
+    
 }
 
 body {
@@ -11,7 +12,7 @@ body {
     position: relative;
     top:25px;
     left:25px;
-    width: 800px;
+    width: 1000px;
     height: auto;
     min-height: 800px;
     border:2px solid black;
@@ -21,17 +22,65 @@ body {
     grid-gap:10px;
     padding: 15px;
     background-color: #006D77;
+    box-shadow: 3px 3px 3px rgb(44, 44, 44);
 
 }
 
 .left-container, .right-container {
     border: 2px solid black;
+    box-shadow: 3px 3px 3px rgb(44, 44, 44);
 }
 
 .left-container {
     background-color: #EDF6F9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 15px;
+}
+
+.meme-generator {
+    height: 60%;
+    width: 100%;
+    border: 2px solid black;
+    background-color: #ffddd2;
 }
 
 .right-container {
     background-color: #83C5BE ;
+    height: 800px;
+    padding: 0px 15px;
+    overflow-y: auto;
 }
+
+.meme-widgets {
+    height: 250px;
+    width: 100%;
+    border: 2px solid black;
+    margin: 15px 0px;
+    background-color: #ffddd2 ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
+}
+
+.widget-image {
+    min-height: 200px;
+    border: 2px solid black;
+}
+
+.widget-buttons {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    margin-top: 5px;
+}
+
+.widget-buttons > button {
+    width: 100px;
+    height:25px;
+}
+
