--- a/public/styles.css
+++ b/public/styles.css
@@ -45,6 +45,55 @@ body {
     width: 100%;
     border: 2px solid black;
     background-color: #ffddd2;
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.meme {
+
+    position: relative;
+    height: 375px;
+}
+
+.meme > img {
+    width: 375px;
+    height: 375px;
+    border:2px solid black;
+    border-radius: 5px;
+    background-color: black;
+}
+
+h2 {
+    color: white;
+    -webkit-text-stroke: 1px black;
+    font-size: 45px;
+}
+
+h3 {
+    color:white;
+    -webkit-text-stroke: .5px black;
+    font-size: 20px;
+
+}
+
+.top {
+    position:relative;
+    left: 5px;
+    top: -380px; 
+}
+
+.bottom {
+    position:relative;
+    left: 5px;
+    top: -120px; 
+}
+
+.meme-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%;
 }
 
 .right-container {
@@ -67,9 +116,26 @@ body {
     padding: 15px;
 }
 
+.saved-meme-widget {
+    height:175px;
+}
+
 .widget-image {
-    min-height: 200px;
+    height:175px;
+    width: 175px;
     border: 2px solid black;
+}
+
+.saved-meme-toptext {
+    position:relative;
+    left: 5px;
+    top: -175px; 
+}
+
+.saved-meme-bottomtext {
+    position:relative;
+    left: 5px;
+    top: -55px; 
 }
 
 .widget-buttons {
@@ -79,8 +145,7 @@ body {
     margin-top: 5px;
 }
 
-.widget-buttons > button {
-    width: 100px;
+button {
+    width: 120px;
     height:25px;
 }
-
